[tool.poetry]
name = "population-data-usa-viz"
version = "0.1.0"
description = "The puporse of this project is to create a streamlit dashboard on data population of USA"
authors = ["auri99 <aurelleingrid832@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
streamlit-elements = "^0.1.0"
streamlit-shadcn-ui = "^0.1.18"
streamlit-extras = "^0.4.6"
altair = "^5.4.0"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
